<resources>
    <string name="app_name">OpticsDatabase</string>
    <string name="credits">This application is made by Lior Karamany.  The mentor teachers are Itzik Ben-Shitrit and Albert Levy. Phone number: 0526779903</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="id">ID</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="customers">Customers: </string>
    <string name="add_customer">Add customer</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="first_name_input">*First name</string>
    <string name="last_name_input">*Last name</string>
    <string name="customer_id_input">*Customer ID</string>
    <string name="phone_number_input">*Phone number</string>
    <string name="glasses">Glasses</string>
    <string name="lens">Lens</string>
    <string name="back">Back</string>
    <string name="upload">Upload</string>
    <string name="mobile_number">Mobile number</string>
    <string name="capture">Capture Document</string>
    <string name="currently_uploading">The document is currently being uploaded</string>
    <string name="no_enough_info">You haven\'t entered the necessary information</string>
    <string name="customer_edited">Customer has been edited</string>
    <string name="customer_deleted">Customer has been deleted</string>
    <string name="options_settings">Options</string>
    <string name="view_document">View documents</string>
    <string name="edit_details">Edit details</string>
    <string name="delete">Delete</string>
    <string name="document">Document</string>
    <string name="edit">Edit</string>
    <string name="credits_option">Credits</string>
    <string name="customer_uploaded">Customer has been uploaded</string>
    <string name="push_failed">Push failed</string>
    <string name="no_photo">You didn\'t capture a photo</string>
    <string name="image_uploaded">The document is currently being uploaded</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="customer">Customer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="delete_warning">"Are you sure you want to delete "</string>
    <string name="add">Add</string>
    <string name="doc_edited">The document has been edited</string>
    <string-array name="options_array">
        <item>All</item>
        <item>Glasses</item>
        <item>Lens</item>
    </string-array>
    <string name="doc_uploaded">The document has been uploaded</string>
    <string name="doc_deleted">The document has been deleted</string>
    <string name="error">Error</string>
    <string name="no_connection">There is no internet connection</string>
    <string name="search_customers">Search customers</string>
    <string name="type_of_product">Type of product</string>
    <string name="next">Next</string>
    <string name="employee">Employee mode</string>
    <string name="manager">Manager mode</string>
    <string name="manager_message">You\'re now in manager mode</string>
    <string name="employee_message">You\'re now in employee mode</string>
</resources>
