<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/wall"
    tools:context=".Input">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="17.5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/first_name_input" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/first_name_input" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="17.5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/last_name_input" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/last_name_input"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="17.5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/customer_id_input" />

        <EditText
            android:id="@+id/customerID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/customer_id_input"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="17.5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/address" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="17.5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/city" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPostalAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="17.5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/phone_number_input" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:ems="10"
            android:hint="@string/phone_number_input"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="17.5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mobile_number" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="phone" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"/>

    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="17.5dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/type_of_product" />

    <RadioGroup
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/glasses" />

        <RadioButton
            android:id="@+id/lens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lens" />
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AccentButton"
            android:onClick="back"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/rightBtn"
            android:theme="@style/AccentButton"
            android:onClick="upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
</LinearLayout>